@@ -9,6 +9,7 @@ class Grid
 {
 private:
     std::vector<Cell*> m_grid;
+    int m_radius;
 public:
     Grid(std::vector<Cell *> grid);
     ~Grid();
@@ -16,6 +17,7 @@ public:
     void drawGrid(sf::RenderWindow& window);
     void setGrid(std::vector<Cell*> grid);
     std::vector<Cell*> getGrid();
+    bool isOverCell(sf::Vector2i mouse);
 };
 
 #endif // GRID_H
